Fix CodeHighlightTabs not collapsing correctly with collapsed prop is set in Safari

--- a/src/mantine-code-highlight/src/CodeHighlight.module.css
+++ b/src/mantine-code-highlight/src/CodeHighlight.module.css
@@ -153,6 +153,10 @@
 .root {
   margin-top: 0;
   position: relative;
+
+  &[data-collapsed] :global(.mantine-ScrollArea-viewport > div) {
+    display: block !important;
+  }
 }
 
 .fileIcon {
